<resources>
    <string name="app_name">EducationApp</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="play">Play!</string>
    <string name="settings">Settings</string>


    <string-array name="Minigames">
        <item>Three</item>
        <item>Five</item>
        <item>Ten</item>
        <item>Twenty</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallows">galllows</string>
    <string name="head">head</string>
    <string name="body">body</string>
    <string name="arm">arm</string>
    <string name="leg">leg</string>
    <string name="shake_the_phone">Shake the Phone!</string>
    <string name="_0">0</string>
    <string name="light">light</string>
    <string name="score_0">Score: 0</string>
    <string name="turn_the_lights_on">Turn the lights on!</string>
    <string name="start">Start!</string>
    <string name="time">Time:</string>
    <string name="high_scores">High Scores</string>
    <string name="name">Name:</string>
    <string name="high_score">High Score</string>
    <string name="logo">logo</string>
    <string name="set_difficulty">Set Difficulty</string>
    <string name="helpbutton">helpButton</string>
    <string name="backbutton">backButton</string>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="words">
        <item>TEA</item>
        <item>WOKE</item>
        <item>SLAY</item>
        <item>SHADE</item>
        <item>EXTRA</item>
        <item>PHONE</item>
    </string-array>
</resources>
