<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".game.HangmanFragment"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gallows"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="0dp"
        android:src="@drawable/android_hangman_gallows" />
    <ImageView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/head"
        android:paddingLeft="108dp"
        android:paddingTop="23dp"
        android:src="@drawable/android_hangman_head" />
    <ImageView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/body"
        android:paddingLeft="120dp"
        android:paddingTop="53dp"
        android:src="@drawable/android_hangman_body" />
    <ImageView
        android:id="@+id/arm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arm"
        android:paddingLeft="100dp"
        android:paddingTop="60dp"
        android:src="@drawable/android_hangman_arm1" />

    <ImageView
        android:id="@+id/arm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arm"
        android:paddingLeft="120dp"
        android:paddingTop="60dp"
        android:src="@drawable/android_hangman_arm2" />

    <ImageView
        android:id="@+id/leg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/leg"
        android:paddingLeft="101dp"
        android:paddingTop="90dp"
        android:src="@drawable/android_hangman_leg1" />

    <ImageView
        android:id="@+id/leg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/leg"
        android:paddingLeft="121dp"
        android:paddingTop="90dp"
        android:src="@drawable/android_hangman_leg2" />
</RelativeLayout>
    <LinearLayout
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>
    <GridView
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/letters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#FF000000"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />
</androidx.appcompat.widget.LinearLayoutCompat>


